--- a/package.json
+++ b/package.json
@@ -9,14 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@mui/material": "^6.1.2",
+    "@react-three/drei": "^9.114.2",
+    "autoprefixer": "^10.4.20",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^11.11.1",
+    "howler": "^2.2.4",
+    "lottie-react": "^2.4.0",
+    "next": "14.2.14",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-lottie": "^1.2.4",
+    "react-parallax": "^3.5.1",
+    "react-scroll": "^1.9.0",
+    "react-scroll-parallax": "^3.4.5",
+    "react-three-fiber": "^6.0.13",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.5.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "14.2.14",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
